// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`flair property object is working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import clsx from "clsx";
import { c, cn, flair } from "@flairjs/react";
import { useState } from "react";
export const TestCaseComponent = () => {
	const [case5, setCase5] = useState(false);
	const [case8, setCase8] = useState(false);
	const [case9, setCase9] = useState(false);
	const case3 = "_8Z4fiW_case-3";
	const case6_3 = "_8Z4fiW_case-6-3";
	const case6_4 = "case-6-4";
	const case9_1 = "case-9 _8Z4fiW_case-9-1";
	const case9_2 = "case-9 _8Z4fiW_case-9-2";
	const case10 = "case-10";
	const case11_1 = "case-11-1";
	const case11 = \`case-11 \${case11_1} _8Z4fiW_case-11-2\`;
	const case12_1 = "case-12-1";
	const case12 = "case-12 " + case12_1 + " _8Z4fiW_case-12-2";
	const case13 = c("_8Z4fiW_case-13 case-13-1");
	const case14 = cn("_8Z4fiW_case-14 case-14-1");
	const case15Handler = () => {
		return c("_8Z4fiW_case-15 case-15-1");
	};
	return <>
      <p className="_8Z4fiW_case-1">Case1</p>
      <p className="_8Z4fiW_case-2 _8Z4fiW_case-2-1 case-2-2">Case2</p>
      <div className={case3}>Case3</div>
      <div className={clsx("_8Z4fiW_case-4")}>Case4</div>
      <button className={clsx("_8Z4fiW_case-5", {
		"_8Z4fiW_case-5-1": true,
		"_8Z4fiW_case-5-2": case5,
		"case-5-3": true
	})} onClick={() => setCase5((p) => !p)}>
        Case5
      </button>
      <div className={clsx("_8Z4fiW_case-6", [
		"_8Z4fiW_case-6-1",
		"case-6-2",
		case6_3
	], { [case6_4]: true })}>
        Case6
      </div>
      <div className={["case-7", "case-7-1"].join(" ")}>Case7</div>
      <button className={case8 ? "_8Z4fiW_case-8 _8Z4fiW_case-8-1" : "_8Z4fiW_case-8 _8Z4fiW_case-8-2"} onClick={() => {
		setCase8((p) => !p);
	}}>
        Case8
      </button>
      <button className={case9 ? case9_1 : case9_2} onClick={() => {
		setCase9((p) => !p);
	}}>
        Case9
      </button>
      <div className={clsx({ [case10]: true })}>
        Case10
      </div>
      <div className={case11}>Case11</div>
      <div className={case12}>Case12</div>
      <div className={case13}>Case13</div>
      <div className={clsx(case14, "case-14-2")}>Case14</div>
      <div className={case15Handler()}>Case15</div>
    </>;
};
false;
"
`;

exports[`flair property string is working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import clsx from "clsx";
import { c, cn } from "@flairjs/react";
import { useState } from "react";
export const TestCaseComponent = () => {
	const [case5, setCase5] = useState(false);
	const [case8, setCase8] = useState(false);
	const [case9, setCase9] = useState(false);
	const case3 = "_8Z4fiW_case-3";
	const case6_3 = "_8Z4fiW_case-6-3";
	const case6_4 = "case-6-4";
	const case9_1 = "case-9 _8Z4fiW_case-9-1";
	const case9_2 = "case-9 _8Z4fiW_case-9-2";
	const case10 = "case-10";
	const case11_1 = "case-11-1";
	const case11 = \`case-11 \${case11_1} _8Z4fiW_case-11-2\`;
	const case12_1 = "case-12-1";
	const case12 = "case-12 " + case12_1 + " _8Z4fiW_case-12-2";
	const case13 = c("_8Z4fiW_case-13 case-13-1");
	const case14 = cn("_8Z4fiW_case-14 case-14-1");
	const case15Handler = () => {
		return c("_8Z4fiW_case-15 case-15-1");
	};
	return <>
      <p className="_8Z4fiW_case-1">Case1</p>
      <p className="_8Z4fiW_case-2 _8Z4fiW_case-2-1 case-2-2">Case2</p>
      <div className={case3}>Case3</div>
      <div className={clsx("_8Z4fiW_case-4")}>Case4</div>
      <button className={clsx("_8Z4fiW_case-5", {
		"_8Z4fiW_case-5-1": true,
		"_8Z4fiW_case-5-2": case5,
		"case-5-3": true
	})} onClick={() => setCase5((p) => !p)}>
        Case5
      </button>
      <div className={clsx("_8Z4fiW_case-6", [
		"_8Z4fiW_case-6-1",
		"case-6-2",
		case6_3
	], { [case6_4]: true })}>
        Case6
      </div>
      <div className={["case-7", "case-7-1"].join(" ")}>Case7</div>
      <button className={case8 ? "_8Z4fiW_case-8 _8Z4fiW_case-8-1" : "_8Z4fiW_case-8 _8Z4fiW_case-8-2"} onClick={() => {
		setCase8((p) => !p);
	}}>
        Case8
      </button>
      <button className={case9 ? case9_1 : case9_2} onClick={() => {
		setCase9((p) => !p);
	}}>
        Case9
      </button>
      <div className={clsx({ [case10]: true })}>
        Case10
      </div>
      <div className={case11}>Case11</div>
      <div className={case12}>Case12</div>
      <div className={case13}>Case13</div>
      <div className={clsx(case14, "case-14-2")}>Case14</div>
      <div className={case15Handler()}>Case15</div>
    </>;
};
false;
"
`;

exports[`style Tag is working 1`] = `
"import "@flairjs/css/cached-css/6091365a83003455.css";
import clsx from "clsx";
import { Style, c, cn } from "@flairjs/react";
import { useState } from "react";
export const TestCaseComponent = () => {
	const [case5, setCase5] = useState(false);
	const [case8, setCase8] = useState(false);
	const [case9, setCase9] = useState(false);
	const case3 = "_8Z4fiW_case-3";
	const case6_3 = "_8Z4fiW_case-6-3";
	const case6_4 = "case-6-4";
	const case9_1 = "case-9 _8Z4fiW_case-9-1";
	const case9_2 = "case-9 _8Z4fiW_case-9-2";
	const case10 = "case-10";
	const case11_1 = "case-11-1";
	const case11 = \`case-11 \${case11_1} _8Z4fiW_case-11-2\`;
	const case12_1 = "case-12-1";
	const case12 = "case-12 " + case12_1 + " _8Z4fiW_case-12-2";
	const case13 = c("_8Z4fiW_case-13 case-13-1");
	const case14 = cn("_8Z4fiW_case-14 case-14-1");
	const case15Handler = () => {
		return c("_8Z4fiW_case-15 case-15-1");
	};
	return <>
      <p className="_8Z4fiW_case-1">Case1</p>
      <p className="_8Z4fiW_case-2 _8Z4fiW_case-2-1 case-2-2">Case2</p>
      <div className={case3}>Case3</div>
      <div className={clsx("_8Z4fiW_case-4")}>Case4</div>
      <button className={clsx("_8Z4fiW_case-5", {
		"_8Z4fiW_case-5-1": true,
		"_8Z4fiW_case-5-2": case5,
		"case-5-3": true
	})} onClick={() => setCase5((p) => !p)}>
        Case5
      </button>
      <div className={clsx("_8Z4fiW_case-6", [
		"_8Z4fiW_case-6-1",
		"case-6-2",
		case6_3
	], { [case6_4]: true })}>
        Case6
      </div>
      <div className={["case-7", "case-7-1"].join(" ")}>Case7</div>
      <button className={case8 ? "_8Z4fiW_case-8 _8Z4fiW_case-8-1" : "_8Z4fiW_case-8 _8Z4fiW_case-8-2"} onClick={() => {
		setCase8((p) => !p);
	}}>
        Case8
      </button>
      <button className={case9 ? case9_1 : case9_2} onClick={() => {
		setCase9((p) => !p);
	}}>
        Case9
      </button>
      <div className={clsx({ [case10]: true })}>
        Case10
      </div>
      <div className={case11}>Case11</div>
      <div className={case12}>Case12</div>
      <div className={case13}>Case13</div>
      <div className={clsx(case14, "case-14-2")}>Case14</div>
      <div className={case15Handler()}>Case15</div>
      
    </>;
};
"
`;
